Change lyrics position to center

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,12 @@ h3 {
   font-style: italic;
 }
 
-.lyrics p {
-  display: flex;
+p {
   font-family: "DM Sans", sans-serif;
+}
+
+.lyrics {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }/*# sourceMappingURL=style.css.map */
