--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,8 @@
+// VARIABLES
 $font-header: 'DM Serif Display', serif;
 $font-text: 'DM Sans', sans-serif;
 
+// GLOBAL
 h1, h3 {
     font-family: $font-header;
 }
@@ -9,7 +11,13 @@ h3 {
     font-style: italic;
 }
 
-.lyrics p {
-    display: flex;
+p {
     font-family: $font-text;
+}
+
+// LYRICS
+.lyrics {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
